--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,12 +10,17 @@ License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.0
+Depends:
+    R (>= 3.6.0)
+biocViews:
 Imports:
     plyr,
     R.oo,
     ggplot2,
     dplyr,
-    rlang
+    rlang,
+    ggbio,
+    biovizBase
 Suggests: 
     knitr,
     rmarkdown
