added methods to save and read salmon data as rds files

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,7 +17,9 @@ export(loadSalmonSamples)
 export(plotChromosomes)
 export(plotDeSeq2Heatmap)
 export(plotKeggPathway)
+export(readSalmonData)
 export(removeElements)
+export(saveSalmonData)
 export(splitFields)
 export(splitGenes)
 export(subsetTxi)
