added functions for working with subread data and subsetting samples by group

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,10 +10,14 @@ export(colExists)
 export(concat)
 export(containsElement)
 export(excludeColumns)
+export(getSamplesByGroup)
 export(hasColumn)
 export(loadDataFrame)
+export(loadGroups)
 export(loadSalmonData)
 export(loadSalmonSamples)
+export(loadSamples)
+export(loadSubreadData)
 export(plotChromosomes)
 export(plotDeSeq2Heatmap)
 export(plotKeggPathway)
