--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,9 +14,11 @@ export(getSamplesByGroup)
 export(hasColumn)
 export(loadDataFrame)
 export(loadGroups)
+export(loadNgsProject)
 export(loadSalmonData)
 export(loadSalmonSamples)
 export(loadSamples)
+export(loadSubjects)
 export(loadSubreadData)
 export(plotChromosomes)
 export(plotDeSeq2Heatmap)
