updated rnaseq project loading tools

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,11 +10,13 @@ export(colExists)
 export(concat)
 export(containsElement)
 export(excludeColumns)
+export(getCountsByGroup)
 export(getSamplesByGroup)
 export(hasColumn)
 export(loadDataFrame)
 export(loadGroups)
 export(loadNgsProject)
+export(loadRuns)
 export(loadSalmonData)
 export(loadSalmonSamples)
 export(loadSamples)
