added improved deseq2 function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export("%>%")
 export(addIdColumn)
 export(analyzeSalmonDataDeSeq2)
+export(analyzeSalmonDeSeq2)
 export(appendValues)
 export(checkColExists)
 export(checkFileExists)
@@ -11,6 +12,7 @@ export(concat)
 export(containsElement)
 export(excludeColumns)
 export(getCountsByGroup)
+export(getGroupLevels)
 export(getSamplesByGroup)
 export(hasColumn)
 export(loadDataFrame)
