fixed bug in txdb column name. added function to generate DESeq2 gene tables

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,8 @@ export(loadSalmonSamples)
 export(loadSamples)
 export(loadSubjects)
 export(loadSubreadData)
+export(lookupGenes)
+export(makeDeSeq2Table)
 export(plotChromosomes)
 export(plotDeSeq2Heatmap)
 export(plotKeggPathway)
