adding other R6 classes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,11 @@ export("%>%")
 export(DeSeq2Class)
 export(EdgeRClass)
 export(LimmaVoomClass)
+export(MetaboAnalystClass)
+export(MetaboDiffClass)
 export(MixomicsClass)
 export(NgsProjectClass)
+export(RoplsClass)
 export(SalmonClass)
 export(WgcnaClass)
 export(addIdColumn)
