--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(MetaboAnalystClass)
 export(MetaboDiffClass)
 export(MixomicsClass)
 export(NgsProjectClass)
+export(RnaSeqCountDataClass)
 export(RoplsClass)
 export(SalmonClass)
 export(WgcnaClass)
