added metabolomics data classes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export("%>%")
 export(DeSeq2Class)
 export(EdgeRClass)
+export(HmtMetabolomicsDataClass)
 export(LimmaVoomClass)
 export(MetaboAnalystClass)
 export(MetaboDiffClass)
@@ -11,6 +12,7 @@ export(NgsProjectClass)
 export(RnaSeqCountDataClass)
 export(RoplsClass)
 export(SalmonClass)
+export(TakedaMetabolomicsDataClass)
 export(WgcnaClass)
 export(addIdColumn)
 export(analyzeSalmonDataDeSeq2)
