--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,7 +41,7 @@ export(lookupGenes)
 export(makeDeSeq2Table)
 export(plotChromosomes)
 export(plotDeSeq2Heatmap)
-export(plotKeggPathway)
+#export(plotKeggPathway)
 export(readSalmonData)
 export(removeElements)
 export(saveSalmonData)
